--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -14,57 +14,54 @@ build_oscap:
   stage: build
   script:
     # Check if new version of OpenSCAP is available
-    # - apt update
-    # - apt install -y curl
-    # - openscap_version=$(curl --silent "https://api.github.com/repos/OpenSCAP/openscap/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
-    # - current_oscap_version="1.3.7"
-    # - 'if [ "$openscap_version" == "$current_oscap_version" ]; then
-    #   echo "No new version of OpenSCAP is available: $openscap_version";
-    #   exit 0;
-    #   fi'
-    # - echo "$openscap_version" > version.txt
-    # - 'echo "New version of OpenSCAP is available: $openscap_version"'
-
-    # # Install build dependencies
-    # - apt install -y bzip2 cmake python3-pip libxml2-utils ninja-build xsltproc cmake libdbus-1-dev libdbus-glib-1-dev libcurl4-openssl-dev libgcrypt20-dev libselinux1-dev libxslt1-dev libgconf2-dev libacl1-dev libblkid-dev libcap-dev libxml2-dev libldap2-dev libpcre3-dev python3-dev swig libxml-parser-perl libxml-xpath-perl libperl-dev libbz2-dev librpm-dev g++ libapt-pkg-dev libyaml-dev libxmlsec1-dev libxmlsec1-openssl
-
-    # # Download OpenSCAP source code
-    # - openscap_url="https://github.com/OpenSCAP/openscap/releases/download/${openscap_version}/openscap-${openscap_version}.tar.gz"
-    # - curl -so /tmp/openscap-${openscap_version}.tar.gz -L "$openscap_url"
-    # - tar -xzpf /tmp/openscap-${openscap_version}.tar.gz -C /tmp
-
-    # # Build OpenSCAP
-    # - mkdir -p /tmp/openscap-${openscap_version}/build
-    # - cd /tmp/openscap-${openscap_version}/build
-    # - cmake -DCMAKE_INSTALL_PREFIX=/usr ../
-    # - make install
-
-    # # Create deb package
-    # - mkdir -p /tmp/oscap_${openscap_version}/DEBIAN
-    # - 'printf "Package: oscap\nVersion: ${openscap_version}\nArchitecture: amd64\nDepends: libxml2, libxslt1-dev, libxmlsec1, libxmlsec1-openssl, libcurl4-openssl-dev, librpm-dev, libgconf2-dev, libyaml-dev\n" > /tmp/oscap_${openscap_version}/DEBIAN/control'
-
-    # - mkdir -p /tmp/oscap_${openscap_version}/usr/bin
-    # - cp /tmp/openscap-${openscap_version}/build/utils/oscap /tmp/oscap_${openscap_version}/usr/bin
-
-    # - mkdir -p /tmp/oscap_${openscap_version}/usr/lib
-    # - cp /tmp/openscap-${openscap_version}/build/src/libopenscap.so.25 /tmp/oscap_${openscap_version}/usr/lib
-    # - cp /tmp/openscap-${openscap_version}/build/src/SCE/libopenscap_sce.so.25 /tmp/oscap_${openscap_version}/usr/lib
-
-    # - mkdir -p /tmp/oscap_${openscap_version}/usr/include/openscap
-    # - cp -r /usr/include/openscap/ /tmp/oscap_${openscap_version}/usr/include/
-
-    # - mkdir -p /tmp/oscap_${openscap_version}/usr/share/openscap
-    # - cp -r /usr/share/openscap/ /tmp/oscap_${openscap_version}/usr/share/
-
-    # - mkdir -p /tmp/oscap_${openscap_version}/usr/share/man/man8/
-    # - cp /usr/share/man/man8/oscap.8 /tmp/oscap_${openscap_version}/usr/share/man/man8/
-
-    # - dpkg-deb --build /tmp/oscap_${openscap_version}
-    - openscap_version="1.3.7" # TODO: Remove this line
+    - apt update
+    - apt install -y curl git
+    - openscap_version=$(curl --silent "https://api.github.com/repos/OpenSCAP/openscap/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
+    - current_oscap_version=$(git -c 'versionsort.suffix=-' ls-remote --exit-code --refs --sort='version:refname' --tags https://oauth2:$ACCESS_TOKEN@gitlab.example.com/root/oscap.git '*.*.*' | tail --lines=1 | cut --delimiter='/' --fields=3 | sed -E "s/v//")
+    - 'if [ "$openscap_version" == "$current_oscap_version" ]; then
+      echo "No new version of OpenSCAP is available: $openscap_version";
+      exit 0;
+      fi'
     - echo "$openscap_version" > version.txt
-    # - touch /tmp/oscap_${openscap_version}.deb
-    # - mv /tmp/oscap_${openscap_version}.deb .
-    - ls -la
+    - 'echo "New version of OpenSCAP is available: $openscap_version"'
+
+    # Install build dependencies
+    - apt install -y bzip2 cmake python3-pip libxml2-utils ninja-build xsltproc cmake libdbus-1-dev libdbus-glib-1-dev libcurl4-openssl-dev libgcrypt20-dev libselinux1-dev libxslt1-dev libgconf2-dev libacl1-dev libblkid-dev libcap-dev libxml2-dev libldap2-dev libpcre3-dev python3-dev swig libxml-parser-perl libxml-xpath-perl libperl-dev libbz2-dev librpm-dev g++ libapt-pkg-dev libyaml-dev libxmlsec1-dev libxmlsec1-openssl
+
+    # Download OpenSCAP source code
+    - openscap_url="https://github.com/OpenSCAP/openscap/releases/download/${openscap_version}/openscap-${openscap_version}.tar.gz"
+    - curl -so /tmp/openscap-${openscap_version}.tar.gz -L "$openscap_url"
+    - tar -xzpf /tmp/openscap-${openscap_version}.tar.gz -C /tmp
+
+    # Build OpenSCAP
+    - mkdir -p /tmp/openscap-${openscap_version}/build
+    - cd /tmp/openscap-${openscap_version}/build
+    - cmake -DCMAKE_INSTALL_PREFIX=/usr ../
+    - make install
+
+    # Create deb package
+    - mkdir -p /tmp/oscap_${openscap_version}/DEBIAN
+    - 'printf "Package: oscap\nVersion: ${openscap_version}\nArchitecture: amd64\nDepends: libxml2, libxslt1-dev, libxmlsec1, libxmlsec1-openssl, libcurl4-openssl-dev, librpm-dev, libgconf2-dev, libyaml-dev\n" > /tmp/oscap_${openscap_version}/DEBIAN/control'
+
+    - mkdir -p /tmp/oscap_${openscap_version}/usr/bin
+    - cp /tmp/openscap-${openscap_version}/build/utils/oscap /tmp/oscap_${openscap_version}/usr/bin
+
+    - mkdir -p /tmp/oscap_${openscap_version}/usr/lib
+    - cp /tmp/openscap-${openscap_version}/build/src/libopenscap.so.25 /tmp/oscap_${openscap_version}/usr/lib
+    - cp /tmp/openscap-${openscap_version}/build/src/SCE/libopenscap_sce.so.25 /tmp/oscap_${openscap_version}/usr/lib
+
+    - mkdir -p /tmp/oscap_${openscap_version}/usr/include/openscap
+    - cp -r /usr/include/openscap/ /tmp/oscap_${openscap_version}/usr/include/
+
+    - mkdir -p /tmp/oscap_${openscap_version}/usr/share/openscap
+    - cp -r /usr/share/openscap/ /tmp/oscap_${openscap_version}/usr/share/
+
+    - mkdir -p /tmp/oscap_${openscap_version}/usr/share/man/man8/
+    - cp /usr/share/man/man8/oscap.8 /tmp/oscap_${openscap_version}/usr/share/man/man8/
+
+    - dpkg-deb --build /tmp/oscap_${openscap_version}
+    - echo "$openscap_version" > version.txt
+    - mv /tmp/oscap_${openscap_version}.deb .
   artifacts:
     paths:
       - version.txt
@@ -90,10 +87,19 @@ deploy_oscap:
       echo "No new version of OpenSCAP is available";
       exit 0;
       fi
-    - openscap_version=$(cat version.txt)
     - 'echo "New version of OpenSCAP is available: $openscap_version"'
-    # - git config --global user.email "gitlab-ci@localhost"
-    # - git config --global user.name "GitLab CI"
-    # - git add version.txt oscap_${openscap_version}.deb
-    # - git commit -m "Update OpenSCAP to version ${openscap_version}"
-    # - git push
+
+    - openscap_version=$(cat version.txt)
+    - printf "10.10.9.99\tgitlab.example.com\n" >> /etc/hosts
+    - export GIT_SSL_NO_VERIFY=1
+
+    - apt install git
+    - git init
+    - git remote add origin https://oauth2:$ACCESS_TOKEN@gitlab.example.com/root/oscap.git
+    - git config user.email "ci-bot@gitlab.example.com"
+    - git config user.name "ci-bot"
+
+    - git add oscap_${openscap_version}.deb
+    - git commit -m "build version ${openscap_version}"
+    - git tag -a "v${openscap_version}" -m "build version ${openscap_version}"
+    - git push origin v${openscap_version}
