--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -38,9 +38,9 @@ build_oscap:
 
     # Build OpenSCAP
     - mkdir -p /tmp/openscap-${openscap_version}/build
-    - cd /tmp/openscap-${openscap_version}/build
-    - cmake -DCMAKE_INSTALL_PREFIX=/usr ../
-    - make install
+    # - cd /tmp/openscap-${openscap_version}/build
+    - cmake -DCMAKE_INSTALL_PREFIX=/usr -S /tmp/openscap-${openscap_version} -B /tmp/openscap-${openscap_version}/build
+    - make -C /tmp/openscap-${openscap_version}/build install
 
     # Create deb package
     - mkdir -p /tmp/oscap_${openscap_version}/DEBIAN
@@ -62,36 +62,39 @@ build_oscap:
     - mkdir -p /tmp/oscap_${openscap_version}/usr/share/man/man8/
     - cp /usr/share/man/man8/oscap.8 /tmp/oscap_${openscap_version}/usr/share/man/man8/
 
+    - pwd
+    - ls -la
     - dpkg-deb --build /tmp/oscap_${openscap_version}
     # - openscap_version="1.3.8"
     # - touch /tmp/oscap_${openscap_version}.deb
-    - mkdir artifacts
+    # - mkdir artifacts
 
-    - echo "$openscap_version" > artifacts/version.txt
-    - mv /tmp/oscap_${openscap_version}.deb artifacts
+    - echo "$openscap_version" > version.txt
+    - mv /tmp/oscap_${openscap_version}.deb .
     - pwd
-    - ls -la artifacts
+    - ls -la
   artifacts:
     paths:
-      - artifacts/
+      - version.txt
+      - oscap_*.deb
 test_oscap:
   stage: test
   needs: ["build_oscap"]
   script:
-    - if [ ! -f artifacts/version.txt ]; then
+    - if [ ! -f version.txt ]; then
       echo "No new version of OpenSCAP is available";
       exit 0;
       fi
-    - openscap_version=$(cat artifacts/version.txt)
+    - openscap_version=$(cat version.txt)
     - 'echo "New version of OpenSCAP is available: $openscap_version"'
     - apt update
-    - apt install -fy artifacts/oscap_${openscap_version}.deb
+    - apt install -fy oscap_${openscap_version}.deb
     - oscap --version
 deploy_oscap:
   stage: deploy
   needs: ["test_oscap"]
   script:
-    - if [ ! -f artifacts/version.txt ]; then
+    - if [ ! -f version.txt ]; then
       echo "No new version of OpenSCAP is available";
       exit 0;
       fi
@@ -102,7 +105,6 @@ deploy_oscap:
     - export GIT_SSL_NO_VERIFY=1
 
     - apt install git
-    - cd artifacts
     - pwd
     - ls -la
     - git init
