--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -71,30 +71,30 @@ build_oscap:
 
     # - echo "$openscap_version" > version.txt
     # - mv /tmp/oscap_${openscap_version}.deb .
-    - pwd
-    - ls -la
-  artifacts:
-    paths:
-      - version.txt
-      - oscap_*.deb
-test_oscap:
-  stage: test
-  needs: ["build_oscap"]
-  script:
-    - if [ ! -f version.txt ]; then
-      echo "No new version of OpenSCAP is available";
-      exit 0;
-      fi
-    - openscap_version=$(cat version.txt)
-    - 'echo "New version of OpenSCAP is available: $openscap_version"'
-    - apt update
-    - pwd
-    - ls -la
-    - apt install -fy ./oscap_${openscap_version}.deb
-    - oscap --version
+#     - pwd
+#     - ls -la
+#   artifacts:
+#     paths:
+#       - version.txt
+#       - oscap_*.deb
+# test_oscap:
+#   stage: test
+#   needs: ["build_oscap"]
+#   script:
+#     - if [ ! -f version.txt ]; then
+#       echo "No new version of OpenSCAP is available";
+#       exit 0;
+#       fi
+#     - openscap_version=$(cat version.txt)
+#     - 'echo "New version of OpenSCAP is available: $openscap_version"'
+#     - apt update
+#     - pwd
+#     - ls -la
+#     - apt install -fy ./oscap_${openscap_version}.deb
+#     - oscap --version
 deploy_oscap:
   stage: deploy
-  needs: ["test_oscap"]
+  # needs: ["test_oscap"]
   script:
     - if [ ! -f version.txt ]; then
       echo "No new version of OpenSCAP is available";
@@ -106,7 +106,7 @@ deploy_oscap:
     - printf "10.10.9.99\tgitlab.example.com\n" >> /etc/hosts
     - export GIT_SSL_NO_VERIFY=1
 
-    - apt install git
+    - apt update; apt install -y git
     - pwd
     - ls -la
     - git init
@@ -117,4 +117,4 @@ deploy_oscap:
     - git add oscap_${openscap_version}.deb
     - git commit -m "build version ${openscap_version}"
     - git tag -a "v${openscap_version}" -m "build version ${openscap_version}"
-    - git push origin v${openscap_version}
+    # - git push origin v${openscap_version}
