--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -17,6 +17,7 @@ build_oscap:
     - apt update
     - apt install -y curl git
     - openscap_version=$(curl --silent "https://api.github.com/repos/OpenSCAP/openscap/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
+    # - printf "10.10.9.99\tgitlab.example.com\n" >> /etc/hosts
     - current_oscap_version=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort='version:refname' --tags https://oauth2:$OSCAP_ACCESS_TOKEN@gitlab.example.com/root/oscap.git '*.*.*' | tail --lines=1 | cut --delimiter='/' --fields=3 | sed -E "s/v//")
     - 'if [ "$openscap_version" == "$current_oscap_version" ]; then
       echo "No new version of OpenSCAP is available: $openscap_version";
@@ -100,7 +101,7 @@ deploy_oscap:
     - 'echo "New version of OpenSCAP is available: $openscap_version"'
 
     - openscap_version=$(cat version.txt)
-    - printf "10.10.9.99\tgitlab.example.com\n" >> /etc/hosts
+    # - printf "10.10.9.99\tgitlab.example.com\n" >> /etc/hosts
 
     - apt update; apt install -y git
     - cp oscap_${openscap_version}.deb /tmp
