--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ default:
 run-security-scan:
   stage: scan
   script:
-    - exit 2 || [[ $? == 2 ]]
+    - bash -c 'exit 2' || [[ $? == 2 ]] && echo "Error"
     - echo "Run security scan"
 # run-security-scan:
 #   stage: scan
