--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -17,7 +17,6 @@ build_oscap:
     - apt update
     - apt install -y curl git
     - openscap_version=$(curl --silent "https://api.github.com/repos/OpenSCAP/openscap/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
-    # - printf "10.10.9.99\tgitlab.example.com\n" >> /etc/hosts
     - current_oscap_version=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort='version:refname' --tags https://oauth2:$OSCAP_ACCESS_TOKEN@gitlab.example.com/root/oscap.git '*.*.*' | tail --lines=1 | cut --delimiter='/' --fields=3 | sed -E "s/v//")
     - 'if [ "$openscap_version" == "$current_oscap_version" ]; then
       echo "No new version of OpenSCAP is available: $openscap_version";
@@ -59,16 +58,9 @@ build_oscap:
 
     - mkdir -p /tmp/oscap_${openscap_version}/usr/share/man/man8/
     - cp /usr/share/man/man8/oscap.8 /tmp/oscap_${openscap_version}/usr/share/man/man8/
-
-    - pwd
-    - ls -la
     - dpkg-deb --build /tmp/oscap_${openscap_version}
-    # - openscap_version="1.3.8"
-    # - touch /tmp/oscap_${openscap_version}.deb
-    # - mkdir artifacts
+
     - mv /tmp/oscap_${openscap_version}.deb .
-    - pwd
-    - ls -la
   artifacts:
     paths:
       - version.txt
@@ -97,7 +89,6 @@ deploy_oscap:
     - 'echo "New version of OpenSCAP is available: $openscap_version"'
 
     - openscap_version=$(cat version.txt)
-    # - printf "10.10.9.99\tgitlab.example.com\n" >> /etc/hosts
 
     - apt update; apt install -y git
     - cp oscap_${openscap_version}.deb /tmp
@@ -110,6 +101,6 @@ deploy_oscap:
     - git config user.name "ci-bot"
 
     - git add oscap_${openscap_version}.deb
-    - git commit -m "build version ${openscap_version}"
-    - git tag -a "v${openscap_version}" -m "build version ${openscap_version}"
+    - git commit -m "Update oscap to version ${openscap_version}"
+    - git tag -a "v${openscap_version}" -m "Update oscap to version ${openscap_version}"
     - git push origin v${openscap_version}
